--- a/form.html
+++ b/form.html
@@ -68,7 +68,7 @@
       font-weight: bold;
       display: inline-block;
     }
-    .form input, .form textarea{
+    .form input{
       outline: none;
       border-top: none;
       border-left: none;
