--- a/form.html
+++ b/form.html
@@ -51,12 +51,13 @@
       top: -28px;
     }
     .body{
-      margin: 60px 0px 70px;
+      margin: 50px 0px 70px;
       padding: 10px;
       text-align: left;
     }
     .body p{
       font-size: 12px;
+      font-weight: bold;
     }
     .form{
       align-items: center;
