--- a/form.html
+++ b/form.html
@@ -75,7 +75,8 @@
       border-left: none;
       border-right: none;
       border-radius: 0;
-      border-bottom: 2px dotted #000;
+      color: #625073;
+      border-bottom: 2px dotted #625073;
       font-size: 14px;
       font-weight: bold;
       display: inline;
