--- a/app.html
+++ b/app.html
@@ -15,11 +15,12 @@
 </head>
   <body>
     <div>
-
-<!-- Use icons in your HTML -->
-<i class="fas fa-user"></i>      
-<i class="far fa-user"></i>
-<i class="fab fa-twitter"></i>      
+      <i class="fas fa-user"></i>      
+      <i class="far fa-user"></i>
+      <i class="fab fa-twitter"></i>      
+    </div>
+    <div class="bottom">
+      
     </div>
     <script src="sw.js"></script>
   </body>
