--- a/app.html
+++ b/app.html
@@ -10,17 +10,28 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <title>Tick Mill</title>
   <style>
-    
+    .container{
+      background: #f2f2f3;
+    }
+    .bottom{
+      display: flex;
+      position: fixed;
+      bottom: 0;
+    }
   </style>
 </head>
   <body>
-    <div>
+    <div class="container">
       <i class="fas fa-user"></i>      
       <i class="far fa-user"></i>
       <i class="fab fa-twitter"></i>      
     </div>
     <div class="bottom">
-      
+      <i class="fas fa-user"></i>      
+      <i class="far fa-user"></i>
+      <i class="fab fa-twitter"></i>
+      <i class="fas fa-user"></i>      
+      <i class="far fa-user"></i>
     </div>
     <script src="sw.js"></script>
   </body>
