--- a/app.html
+++ b/app.html
@@ -27,7 +27,7 @@
       <i class="fab fa-twitter"></i>      
     </div>
     <div class="bottom">
-      <i class="fas fa-user"></i>      
+      <i class="fa fa-home" aria-hidden="true"></i>      
       <i class="far fa-user"></i>
       <i class="fab fa-twitter"></i>
       <i class="fas fa-user"></i>      
