--- a/app.html
+++ b/app.html
@@ -23,16 +23,19 @@
 </head>
   <body>
     <div class="container">
-      <i class="fas fa-user"></i>      
-      <i class="far fa-user"></i>
-      <i class="fab fa-twitter"></i>      
-    </div>
-    <div class="bottom">
-      <i class="fa fa-home" aria-hidden="true"></i>      
-      <i class="far fa-user"></i>
-      <i class="fab fa-twitter"></i>
-      <i class="fas fa-user"></i>      
-      <i class="far fa-user"></i>
+      <div class="top">
+        <i class="fas fa-user"></i>      
+        <i class="far fa-user"></i>
+        <i class="fab fa-twitter"></i> 
+      </div>
+    
+      <div class="bottom">
+        <i class="fa fa-home" aria-hidden="true"></i>      
+        <i class="far fa-user"></i>
+        <i class="fab fa-twitter"></i>
+        <i class="fas fa-user"></i>      
+        <i class="far fa-user"></i>
+      </div>
     </div>
     <script src="sw.js"></script>
   </body>
