--- a/app.html
+++ b/app.html
@@ -24,7 +24,7 @@
   <body>
     <div class="container">
       <div class="top">
-        <i class="fas fa-user"></i>      
+        <h3>Account</h3>      
         <i class="far fa-user"></i>
         <i class="fab fa-twitter"></i> 
       </div>
