--- a/app.html
+++ b/app.html
@@ -16,8 +16,8 @@
     .bottom{
       display: flex;
       position: fixed;
+      gap: 20px;
       bottom: 0;
-      margin: auto;
     }
   </style>
 </head>
