--- a/app.html
+++ b/app.html
@@ -16,7 +16,7 @@
     .bottom{
       display: flex;
       position: fixed;
-      gap: 20px;
+      justify-content: space-evenly;
       bottom: 0;
     }
   </style>
