--- a/app.html
+++ b/app.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <title>Tick Mill</title>
   <style>
-    .container{
+    body{
       background: #f2f2f3;
     }
     .bottom{
