--- a/app.html
+++ b/app.html
@@ -18,6 +18,8 @@
       position: fixed;
       justify-content: space-evenly;
       bottom: 0;
+      background: #fff;
+      border-top: 1px solid #ccc;
     }
   </style>
 </head>
