--- a/app.html
+++ b/app.html
@@ -16,6 +16,7 @@
     .bottom{
       display: flex;
       position: fixed;
+      width: 100%;
       justify-content: space-evenly;
       bottom: 0;
       background: #fff;
