--- a/app.html
+++ b/app.html
@@ -13,6 +13,10 @@
     body{
       background: #f2f2f3;
     }
+    .top{
+      display: flex;
+      text-align: center;
+    }
     .bottom{
       display: flex;
       position: fixed;
