--- a/app.html
+++ b/app.html
@@ -21,7 +21,7 @@
       display: flex;
       position: fixed;
       width: 100%;
-      justify-content: space-evenly;
+      justify-content: space-between;
       bottom: 0;
       background: #fff;
       border-top: 1px solid #ccc;
