--- a/app.html
+++ b/app.html
@@ -16,6 +16,8 @@
     .top{
       display: flex;
       text-align: center;
+      width: 100%;
+      background: white;
     }
     .bottom{
       display: flex;
