--- a/app.html
+++ b/app.html
@@ -24,6 +24,7 @@
       position: fixed;
       width: 100%;
       justify-content: space-between;
+      padding: 5px;
       bottom: 0;
       background: #fff;
       border-top: 1px solid #ccc;
