--- a/app.html
+++ b/app.html
@@ -15,8 +15,7 @@
     }
     .top{
       display: flex;
-      text-align: center;
-      width: 100%;
+      align-items: center;
       background: white;
     }
     .bottom{
