--- a/app.html
+++ b/app.html
@@ -19,6 +19,12 @@
       align-items: center;
       background: white;
     }
+    .top h3{
+    }
+    .top i{
+      border: 1px solid red;
+      justify-content: left;
+    }
     .bottom{
       display: flex;
       position: fixed;
