--- a/app.html
+++ b/app.html
@@ -34,6 +34,7 @@
       bottom: 0;
       background: #fff;
       border-top: 1px solid #ccc;
+      box-sizing: border-box;
     }
   </style>
 </head>
