--- a/app.html
+++ b/app.html
@@ -23,7 +23,7 @@
     }
     .top i{
       border: 1px solid red;
-      justify-content: left;
+      text-align: left;
     }
     .bottom{
       display: flex;
