--- a/app.html
+++ b/app.html
@@ -12,7 +12,8 @@
   <style>
     body{
       background: #f2f2f3;
-      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
     }
     .top{
       display: flex;
