--- a/app.html
+++ b/app.html
@@ -31,7 +31,7 @@
       position: fixed;
       width: 100%;
       justify-content: space-between;
-      padding: 15px;
+      padding: 15px 20px;
       bottom: 0;
       background: #fff;
       border-top: 1px solid #ccc;
