--- a/app.html
+++ b/app.html
@@ -37,6 +37,9 @@
       border-top: 1px solid #ccc;
       box-sizing: border-box;
     }
+    .bottom i{
+      font-size: 16px;
+    }
   </style>
 </head>
   <body>
@@ -48,11 +51,11 @@
       </div>
     
       <div class="bottom">
-        <i class="fa fa-home" aria-hidden="true"></i>      
-        <i class="far fa-user"></i>
-        <i class="fab fa-twitter"></i>
-        <i class="fas fa-user"></i>      
-        <i class="far fa-user"></i>
+        <button><i class="fa fa-home" aria-hidden="true"></i></button>      
+        <button><i class="fa fa-home" aria-hidden="true"></i></button>
+        <button><i class="fa fa-home" aria-hidden="true"></i></button>
+        <button><i class="fa fa-home" aria-hidden="true"></i></button>     
+        <button><i class="fa fa-home" aria-hidden="true"></i></button>
       </div>
     </div>
     <script src="sw.js"></script>
