--- a/app.html
+++ b/app.html
@@ -51,11 +51,11 @@
       </div>
     
       <div class="bottom">
-        <button><i class="fa fa-home" aria-hidden="true"></i></button>      
-        <button><i class="fa fa-home" aria-hidden="true"></i></button>
-        <button><i class="fa fa-home" aria-hidden="true"></i></button>
-        <button><i class="fa fa-home" aria-hidden="true"></i></button>     
-        <button><i class="fa fa-home" aria-hidden="true"></i></button>
+        <button><i class="fa fa-home" aria-hidden="true"></i>Accounts</button>      
+        <button><i class="fa fa-home" aria-hidden="true"></i>Trade</button>
+        <button><i class="fa fa-home" aria-hidden="true"></i>Insights</button>
+        <button><i class="fa fa-home" aria-hidden="true"></i>Performance</button>     
+        <button><i class="fa fa-home" aria-hidden="true"></i>Profile</button>
       </div>
     </div>
     <script src="sw.js"></script>
