--- a/app.html
+++ b/app.html
@@ -54,8 +54,8 @@
         <button><i class="fa fa-home" aria-hidden="true"></i>Accounts</button>      
         <button><i class="fa fa-sellsy" aria-hidden="true"></i>Trade</button>
         <button><i class="fa fa-globe" aria-hidden="true"></i>Insights</button>
-        <button><i class="fa fa-home" aria-hidden="true"></i>Performance</button>     
-        <button><i class="fa fa-home" aria-hidden="true"></i>Profile</button>
+        <button><i class="fa fa-gratipay" aria-hidden="true"></i>Performance</button>     
+        <button><i class="fa fa-user-o" aria-hidden="true"></i>Profile</button>
       </div>
     </div>
     <script src="sw.js"></script>
