--- a/app.html
+++ b/app.html
@@ -54,7 +54,7 @@
         <button><i class="fa fa-home" aria-hidden="true"></i>Accounts</button>      
         <button><i class="fa fa-sellsy" aria-hidden="true"></i>Trade</button>
         <button><i class="fa fa-globe" aria-hidden="true"></i>Insights</button>
-        <button><i class="fa fa-gratipay" aria-hidden="true"></i>Performance</button>     
+        <button><i class="fa fa-heartbeat" aria-hidden="true"></i>Performance</button>     
         <button><i class="fa fa-user" aria-hidden="true"></i>Profile</button>
       </div>
     </div>
