--- a/app.html
+++ b/app.html
@@ -38,7 +38,8 @@
       box-sizing: border-box;
     }
     .bottom i{
-      font-size: 16px;
+      font-size: 18px;
+      color: #000;
     }
   </style>
 </head>
