--- a/app.html
+++ b/app.html
@@ -31,11 +31,15 @@
       position: fixed;
       width: 100%;
       justify-content: space-between;
-      padding: 15px 20px;
+      padding: 15px;
       bottom: 0;
       background: #fff;
       border-top: 1px solid #ccc;
       box-sizing: border-box;
+    }   
+    .bottom button{
+      background: transparent;
+      color: #000;
     }
     .bottom i{
       font-size: 18px;
