--- a/app.html
+++ b/app.html
@@ -26,6 +26,9 @@
       border: 1px solid red;
       text-align: left;
     }
+    .dashboard{
+      background: #fff;
+    }
     .bottom{
       display: flex;
       position: fixed;
