--- a/app.html
+++ b/app.html
@@ -18,14 +18,13 @@
     .top{
       display: flex;
       align-items: center;
-      justify-content: space-between;
       background: white;
       position: relative;
     }
     .top h3{
       position: absolute;
       left: 50%;
-      /* transform: translateX(-50%); */
+      transform: translateX(-50%);
     }
     .top i{
       border: 1px solid red;
