--- a/app.html
+++ b/app.html
@@ -27,8 +27,6 @@
       transform: translateX(-50%);
     }
     .top i{
-      border: 1px solid red;
-      text-align: left;
     }
     .dashboard{
       background: #fff;
@@ -56,9 +54,11 @@
   <body>
     <div class="container">
       <div class="top">
-        <h3>Account</h3>      
-        <i class="far fa-user"></i>
-        <i class="fab fa-twitter"></i> 
+        <h3>Account</h3>
+        <div class="topIcons">
+          <i class="far fa-user"></i>
+          <i class="fab fa-twitter"></i> 
+        </div>
       </div>
 
       <div class="dashboard">
