--- a/app.html
+++ b/app.html
@@ -45,6 +45,7 @@
     .bottom button{
       background: transparent;
       color: #000;
+      border: 1px solid blue;
     }
     .bottom i{
       font-size: 18px;
