--- a/app.html
+++ b/app.html
@@ -18,6 +18,7 @@
     .top{
       display: flex;
       align-items: center;
+      justify-content: space-between;
       background: white;
       position: relative;
     }
