--- a/app.html
+++ b/app.html
@@ -28,6 +28,7 @@
       transform: translateX(-50%);
     }
     .top i{
+      border: 1px solid red;
     }
     .dashboard{
       background: #fff;
