--- a/app.html
+++ b/app.html
@@ -28,7 +28,9 @@
       transform: translateX(-50%);
     }
     .top i{
-      border: 1px solid red;
+      position: absolute;
+      right: 10px;
+      gap: 10px;
     }
     .dashboard{
       background: #fff;
@@ -47,7 +49,6 @@
     .bottom button{
       background: transparent;
       color: #000;
-      border: 1px solid blue;
     }
     .bottom i{
       font-size: 18px;
