--- a/app.html
+++ b/app.html
@@ -27,10 +27,12 @@
       left: 50%;
       transform: translateX(-50%);
     }
-    .top i{
+    .topIcons{
       position: absolute;
       right: 10px;
-      gap: 10px;
+    }
+    .top i{
+      margin-left: 10px;
     }
     .dashboard{
       background: #fff;
