--- a/app.html
+++ b/app.html
@@ -29,7 +29,7 @@
     }
     .topIcons{
       position: absolute;
-      right: 10px;
+      right: 10%;
     }
     .top i{
       margin-left: 10px;
