--- a/app.html
+++ b/app.html
@@ -21,6 +21,7 @@
       justify-content: space-between;
       background: white;
       position: relative;
+      padding: 20px 0;
     }
     .top h3{
       position: absolute;
