--- a/app.html
+++ b/app.html
@@ -20,7 +20,7 @@
       align-items: center;
       justify-content: space-between;
       background: white;
-      position: relative;
+      position: fixed;
       padding: 20px 0;
     }
     .top h3{
