--- a/app.html
+++ b/app.html
@@ -24,12 +24,12 @@
       padding: 20px 0;
     }
     .top h3{
-      position: absolute;
+      position: relative;
       left: 50%;
       transform: translateX(-50%);
     }
     .topIcons{
-      position: absolute;
+      position: relative;
       right: 10%;
     }
     .top i{
