--- a/app.html
+++ b/app.html
@@ -21,6 +21,7 @@
       justify-content: space-between;
       background: white;
       position: fixed;
+      top: 0;
       padding: 20px 0;
     }
     .top h3{
