--- a/app.html
+++ b/app.html
@@ -23,7 +23,7 @@
       position: fixed;
       top: 0;
       width: 100%;
-      padding: 20px 0;
+      padding: 10px 0;
     }
     .top h3{
       position: relative;
@@ -40,6 +40,7 @@
     }
     .dashboard{
       background: #fff;
+      margin-top: 20px;
     }
     .bottom{
       display: flex;
