--- a/app.html
+++ b/app.html
@@ -16,6 +16,7 @@
       padding: 0;
     }
     .top{
+      background: #f2f2f3;
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -38,7 +39,7 @@
     }
     .dashboard{
       background: #fff;
-      margin-top: 20px;
+      margin-top: 40px;
     }
     .bottom{
       display: flex;
