--- a/app.html
+++ b/app.html
@@ -39,7 +39,7 @@
     }
     .dashboard{
       background: #fff;
-      margin-top: 60px;
+      margin: 80px 10px 0;
     }
     .bottom{
       display: flex;
