--- a/app.html
+++ b/app.html
@@ -40,6 +40,7 @@
     .dashboard{
       background: #fff;
       margin: 80px 10px 0;
+      border-radius: 10px;
     }
     .bottom{
       display: flex;
