--- a/app.html
+++ b/app.html
@@ -40,6 +40,7 @@
     .dashboard{
       background: #fff;
       margin: 80px 10px 0;
+      box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.15);
       border-radius: 10px;
     }
     .bottom{
