--- a/app.html
+++ b/app.html
@@ -39,7 +39,7 @@
     }
     .dashboard{
       background: #fff;
-      margin: 80px 10px 0;
+      margin: 100px 10px 0;
       box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.15);
       border-radius: 10px;
     }
@@ -67,7 +67,7 @@
   <body>
     <div class="container">
       <div class="top">
-        <h3>Account</h3>
+        <h3>Accounts</h3>
         <div class="topIcons">
           <i class="far fa-user"></i>
           <i class="fab fa-twitter"></i> 
