--- a/app.html
+++ b/app.html
@@ -40,7 +40,7 @@
     .dashboard{
       background: #fff;
       margin: 100px 10px 0;
-      box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.15);
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1), 0 8px 20px rgba(0,0,0,0.15);
       border-radius: 10px;
     }
     .bottom{
