--- a/app.html
+++ b/app.html
@@ -39,9 +39,10 @@
     }
     .dashboard{
       background: #fff;
-      margin: 100px 10px 0;
+      margin: 100px 15px 0;
+      padding: 15px;
       box-shadow: 0 2px 4px rgba(0,0,0,0.1), 0 8px 20px rgba(0,0,0,0.15);
-      border-radius: 10px;
+      border-radius: 15px;
     }
     .bottom{
       display: flex;
