--- a/app.html
+++ b/app.html
@@ -44,6 +44,12 @@
       box-shadow: 0 2px 4px rgba(0,0,0,0.1), 0 8px 20px rgba(0,0,0,0.15);
       border-radius: 15px;
     }
+    .userDetails{
+      display: flex;
+    }
+    .userInfo{
+      display: flex;
+    }
     .bottom{
       display: flex;
       position: fixed;
