--- a/app.html
+++ b/app.html
@@ -46,6 +46,12 @@
     }
     .userDetails{
       display: flex;
+      align-items: center;
+      position: relative;
+    }
+    .userDetails{
+      position: absolute;
+      right: 5%;
     }
     .userInfo{
       display: flex;
