--- a/app.html
+++ b/app.html
@@ -49,7 +49,7 @@
       align-items: center;
       position: relative;
     }
-    .userDetails{
+    .userDetails i{
       position: absolute;
       right: 5%;
     }
