--- a/app.html
+++ b/app.html
@@ -48,6 +48,7 @@
       display: flex;
       align-items: center;
       position: relative;
+      margin: 0;
     }
     .userDetails i{
       position: absolute;
