--- a/app.html
+++ b/app.html
@@ -83,8 +83,8 @@
       <div class="top">
         <h3>Accounts</h3>
         <div class="topIcons">
-          <i class="far fa-user"></i>
-          <i class="fab fa-twitter"></i> 
+          <i class="fa fa-university" aria-hidden="true"></i>
+          <i class="fa fa-bell-o" aria-hidden="true"></i>
         </div>
       </div>
 
