--- a/app.html
+++ b/app.html
@@ -92,7 +92,7 @@
         <div class="userDetails">
           <p>OWOEYE MICHAEL</p>
           <p style="color: #ccc;">#592631072</p>
-          <i class="fab fa-twitter"></i> 
+          <i class="fa fa-angle-right" aria-hidden="true"></ 
         </div>
         
         <div class="userInfo">
@@ -109,7 +109,7 @@
           <button><i class="fa fa-home" aria-hidden="true"></i>Accounts</button>      
           <button><i class="fa fa-bar-chart" aria-hidden="true"></i>Trade</button>
           <button><i class="fa fa-globe" aria-hidden="true"></i>Insights</button>
-          <button><i class="fa fa-heartbeat" aria-hidden="true"></i>Performance</button>
+          <button><i class="fa fa-ellipsis-v" aria-hidden="true"></i>Details</button>
         </div>
       </div>
     
