--- a/app.html
+++ b/app.html
@@ -92,7 +92,7 @@
         <div class="userDetails">
           <p>OWOEYE MICHAEL</p>
           <p style="color: #ccc;">#592631072</p>
-          <i class="fa fa-angle-right" aria-hidden="true"></ 
+          <i class="fa fa-angle-right" aria-hidden="true"></i>
         </div>
         
         <div class="userInfo">
