--- a/app.html
+++ b/app.html
@@ -84,7 +84,7 @@
         <h3>Accounts</h3>
         <div class="topIcons">
           <i class="fa fa-university" aria-hidden="true"></i>
-          <i class="fa fa-bell-o" aria-hidden="true"></i>
+          <i class="fa fa-bell" aria-hidden="true"></i>
         </div>
       </div>
 
