--- a/app.html
+++ b/app.html
@@ -107,8 +107,8 @@
         
         <div class="dashButtons">      
           <button><i class="fa fa-bar-chart" aria-hidden="true"></i>Trade</button>
-          <button><i class="fa fa-home" aria-hidden="true"></i>Accounts</button>
-          <button><i class="fa fa-globe" aria-hidden="true"></i>Insights</button>
+          <button><i class="fa fa-arrow-up" aria-hidden="true"></i>Deposit</button>
+          <button><i class="fa fa-paper-plane" aria-hidden="true"></i>Withdraw</button>
           <button><i class="fa fa-ellipsis-v" aria-hidden="true"></i>Details</button>
         </div>
       </div>
