--- a/app.html
+++ b/app.html
@@ -48,7 +48,7 @@
       display: flex;
       align-items: center;
       position: relative;
-      margin: 0;
+      padding: 0;
     }
     .userDetails i{
       position: absolute;
@@ -56,6 +56,20 @@
     }
     .userInfo{
       display: flex;
+    }
+    .userBalance{
+    }
+    .dashbuttons{
+    }
+    .dashbuttons button{
+      background: transparent;
+      color: #000;
+    }
+    .dashbuttons i{
+      font-size: 18px;
+      display: block;
+      border-radius: 50%;
+      background: #f2f2f3;
     }
     .bottom{
       display: flex;
