--- a/app.html
+++ b/app.html
@@ -60,6 +60,7 @@
     .userBalance{
     }
     .dashbuttons{
+      border: 1px solid red;
     }
     .dashbuttons button{
       background: transparent;
