--- a/app.html
+++ b/app.html
@@ -59,14 +59,14 @@
     }
     .userBalance{
     }
-    .dashbuttons{
+    .dashButtons{
       border: 1px solid red;
     }
-    .dashbuttons button{
+    .dashButtons button{
       background: transparent;
       color: #000;
     }
-    .dashbuttons i{
+    .dashButtons i{
       font-size: 18px;
       display: block;
       border-radius: 50%;
