--- a/app.html
+++ b/app.html
@@ -53,6 +53,8 @@
     .userDetails i{
       position: absolute;
       right: 5%;
+      border-radius: 50%;
+      background: #f2f2f3;
     }
     .userInfo{
       display: flex;
@@ -60,7 +62,7 @@
     .userBalance{
     }
     .dashButtons{
-      border: 1px solid red;
+      justify-content: space-between;
     }
     .dashButtons button{
       background: transparent;
@@ -71,6 +73,7 @@
       display: block;
       border-radius: 50%;
       background: #f2f2f3;
+      
     }
     .bottom{
       display: flex;
