--- a/app.html
+++ b/app.html
@@ -73,7 +73,7 @@
       display: block;
       border-radius: 50%;
       background: #f2f2f3;
-      
+      padding: 5px;
     }
     .bottom{
       display: flex;
