--- a/app.html
+++ b/app.html
@@ -62,11 +62,12 @@
     .userBalance{
     }
     .dashButtons{
-      justify-content: space-between;
+  
     }
     .dashButtons button{
       background: transparent;
       color: #000;
+      margin: auto;
     }
     .dashButtons i{
       font-size: 18px;
