--- a/app.html
+++ b/app.html
@@ -63,12 +63,12 @@
     .userBalance{
     }
     .dashButtons{
-  
+      flex-direction: column;
     }
     .dashButtons button{
+      width: 100%;
       background: transparent;
       color: #000;
-      margin: auto;
     }
     .dashButtons i{
       font-size: 18px;
