--- a/app.html
+++ b/app.html
@@ -63,6 +63,7 @@
     .userBalance{
     }
     .dashButtons{
+      display: flex;
       flex-direction: column;
     }
     .dashButtons button{
@@ -75,7 +76,8 @@
       display: block;
       border-radius: 50%;
       background: #f2f2f3;
-      padding: 20px;
+      height: 15px;
+      width: 15px;
     }
     .bottom{
       display: flex;
