--- a/app.html
+++ b/app.html
@@ -63,10 +63,10 @@
     .userBalance{
     }
     .dashButtons{
+      display: flex;
       justify-content: center;
     }
     .dashButtons button{
-      width: 100%;
       background: transparent;
       color: #000;
     }
