--- a/app.html
+++ b/app.html
@@ -65,6 +65,8 @@
     .dashButtons{
       display: flex;
       justify-content: center;
+      border: 1px solid red;
+      gap: 1rem;
     }
     .dashButtons button{
       background: transparent;
@@ -75,8 +77,7 @@
       display: block;
       border-radius: 50%;
       background: #f2f2f3;
-      height: 30px;
-      width: 30px;
+      padding: 20px;
     }
     .bottom{
       display: flex;
