--- a/app.html
+++ b/app.html
@@ -77,7 +77,9 @@
       display: block;
       border-radius: 50%;
       background: #f2f2f3;
-      padding: 20px;
+      align-items: center;
+      height: 50px;
+      width: 50px;
     }
     .bottom{
       display: flex;
