--- a/app.html
+++ b/app.html
@@ -66,7 +66,7 @@
       display: flex;
       justify-content: center;
       border: 1px solid red;
-      gap: 1.5rem;
+      gap: 2rem;
     }
     .dashButtons button{
       background: transparent;
@@ -78,8 +78,7 @@
       border-radius: 50%;
       background: #f2f2f3;
       align-items: center;
-      height: 50px;
-      width: 50px;
+      border: 1px solid red;
     }
     .bottom{
       display: flex;
