--- a/app.html
+++ b/app.html
@@ -64,9 +64,8 @@
     }
     .dashButtons{
       display: flex;
-      justify-content: center;
+      justify-content: space-between;
       border: 1px solid red;
-      gap: 2rem;
     }
     .dashButtons button{
       background: transparent;
@@ -77,8 +76,9 @@
       display: block;
       border-radius: 50%;
       background: #f2f2f3;
-      align-items: center;
-      border: 1px solid red;
+      line-height: 1;
+      height: 50px;
+      width: 50px;
     }
     .bottom{
       display: flex;
