--- a/app.html
+++ b/app.html
@@ -65,7 +65,7 @@
     .dashButtons{
       display: flex;
       justify-content: space-between;
-      border: 1px solid red;
+      border: 1px solid blue;
     }
     .dashButtons button{
       background: transparent;
@@ -76,7 +76,7 @@
       display: block;
       border-radius: 50%;
       background: #f2f2f3;
-      line-height: 1;
+      align-items: center;
       height: 50px;
       width: 50px;
     }
