--- a/app.html
+++ b/app.html
@@ -56,6 +56,7 @@
       border-radius: 50%;
       background: #f2f2f3;
       padding: 10px;
+      transform: translateY(-50%);
     }
     .userInfo{
       display: flex;
@@ -76,7 +77,6 @@
       display: block;
       border-radius: 50%;
       background: #f2f2f3;
-      align-items: center;
       height: 50px;
       width: 50px;
     }
