--- a/app.html
+++ b/app.html
@@ -77,7 +77,7 @@
       background: #f2f2f3;
       height: 50px;
       width: 50px;
-      transform: translateY(50%);
+      margin: auto;
     }
     .bottom{
       display: flex;
