--- a/app.html
+++ b/app.html
@@ -73,11 +73,9 @@
     .dashButtons i{
       font-size: 18px;
       display: block;
-      border-radius: 50%;
+      border-radius: 10px;
       background: #f2f2f3;
-      height: 50px;
-      width: 50px;
-      margin: auto;
+      padding: 20px;
     }
     .bottom{
       display: flex;
