--- a/app.html
+++ b/app.html
@@ -73,9 +73,12 @@
     .dashButtons i{
       font-size: 18px;
       display: block;
-      border-radius: 10px;
+      border-radius: 50%;
       background: #f2f2f3;
-      padding: 20px;
+      height: 40px;
+      width: 40px;
+      position: relative;
+      top: 50%;
     }
     .bottom{
       display: flex;
