--- a/app.html
+++ b/app.html
@@ -72,13 +72,13 @@
     }
     .dashButtons i{
       font-size: 18px;
-      display: block;
-      border-radius: 50%;
+      /*display: block;*/
+    }
+    .icon{
       background: #f2f2f3;
       height: 40px;
       width: 40px;
-      position: relative;
-      top: 50%;
+      border-radius: 50%;
     }
     .bottom{
       display: flex;
@@ -129,10 +129,10 @@
         </div>
         
         <div class="dashButtons">      
-          <button><i class="fa fa-bar-chart" aria-hidden="true"></i>Trade</button>
-          <button><i class="fa fa-arrow-up" aria-hidden="true"></i>Deposit</button>
-          <button><i class="fa fa-paper-plane" aria-hidden="true"></i>Withdraw</button>
-          <button><i class="fa fa-ellipsis-v" aria-hidden="true"></i>Details</button>
+          <button><div class="icon"><i class="fa fa-bar-chart" aria-hidden="true"></i></div>Trade</button>
+          <button><div class="icon"><i class="fa fa-arrow-up" aria-hidden="true"></i></div>Deposit</button>
+          <button><div class="icon"><i class="fa fa-paper-plane" aria-hidden="true"></i></div>Withdraw</button>
+          <button><div class="icon"><i class="fa fa-ellipsis-v" aria-hidden="true"></i></div>Details</button>
         </div>
       </div>
     
