--- a/app.html
+++ b/app.html
@@ -79,6 +79,7 @@
       height: 40px;
       width: 40px;
       border-radius: 50%;
+      align-items: center;
       border: 1px solid red;
     }
     .bottom{
