--- a/app.html
+++ b/app.html
@@ -70,15 +70,18 @@
       background: transparent;
       color: #000;
     }
-    .dashButtons i{
-      font-size: 18px;
-    }
     .icon{
       background: #f2f2f3;
       height: 50px;
       width: 50px;
       border-radius: 50%;
       align-items: center;
+      position: relative;
+    }
+    .dashButtons i{
+      font-size: 18px;
+      position: absolute;
+      top: 50%;
     }
     .bottom{
       display: flex;
