--- a/app.html
+++ b/app.html
@@ -75,6 +75,7 @@
       height: 50px;
       width: 50px;
       border-radius: 50%;
+      align-items: center;
       position: relative;
     }
     .dashButtons i{
