--- a/app.html
+++ b/app.html
@@ -80,6 +80,8 @@
     }
     .dashButtons i{
       font-size: 18px;
+      position: absolute;
+      top: 50%;
     }
     .bottom{
       display: flex;
