--- a/app.html
+++ b/app.html
@@ -26,6 +26,7 @@
     }
     .top h3{
       position: relative;
+      font-weight: bold;
       left: 50%;
       transform: translateX(-50%);
     }
@@ -106,7 +107,7 @@
   <body>
     <div class="container">
       <div class="top">
-        <h3>Accounts</h3>
+        <h3>ACCOUNTS</h3>
         <div class="topIcons">
           <i class="fa fa-university" aria-hidden="true"></i>
           <i class="fa fa-bell" aria-hidden="true"></i>
