--- a/app.html
+++ b/app.html
@@ -132,7 +132,7 @@
         </div>
         
         <div class="dashButtons">      
-          <button><div class="icon"><i class="fa fa-bar-chart" aria-hidden="true"></i></div>Trade</button>
+          <button><div class="icon"><i class="fa fa-area-chart" aria-hidden="true"></i></div>Trade</button>
           <button><div class="icon"><i class="fa fa-arrow-up" aria-hidden="true"></i></div>Deposit</button>
           <button><div class="icon"><i class="fa fa-paper-plane" aria-hidden="true"></i></div>Withdraw</button>
           <button><div class="icon"><i class="fa fa-ellipsis-v" aria-hidden="true"></i></div>Details</button>
@@ -141,7 +141,7 @@
     
       <div class="bottom">
         <button><i class="fa fa-home" aria-hidden="true"></i>Accounts</button>      
-        <button><i class="fa fa-bar-chart" aria-hidden="true"></i>Trade</button>
+        <button><i class="fa fa-area-chart" aria-hidden="true"></i>Trade</button>
         <button><i class="fa fa-globe" aria-hidden="true"></i>Insights</button>
         <button><i class="fa fa-heartbeat" aria-hidden="true"></i>Performance</button>     
         <button><i class="fa fa-user" aria-hidden="true"></i>Profile</button>
