--- a/app.html
+++ b/app.html
@@ -94,7 +94,7 @@
       border-top: 1px solid #ccc;
       box-sizing: border-box;
     }   
-    .bottom button{
+    .bottomBtn{
       background: transparent;
       color: grey;
     }
