--- a/app.html
+++ b/app.html
@@ -120,7 +120,7 @@
       <div class="dashboard">
         <div class="userDetails">
           <p>OWOEYE MICHAEL</p>
-          <p style="color: #ccc;">#592631072</p>
+          <p style="color: #grey;">#592631072</p>
           <i class="fa fa-angle-right" aria-hidden="true"></i>
         </div>
         
