--- a/app.html
+++ b/app.html
@@ -51,6 +51,13 @@
       position: relative;
       padding: 0;
     }
+    .userDetails p{
+      font-size: 12px;
+    }
+    #user{
+      color: rgba(0,0,0,0.5);
+      margin-left: 5px;
+    }
     .userDetails i{
       position: absolute;
       right: 5%;
@@ -120,7 +127,7 @@
       <div class="dashboard">
         <div class="userDetails">
           <p>OWOEYE MICHAEL</p>
-          <p style="color: #grey;">#592631072</p>
+          <p id="user">#592631072</p>
           <i class="fa fa-angle-right" aria-hidden="true"></i>
         </div>
         
