--- a/app.html
+++ b/app.html
@@ -50,6 +50,7 @@
       align-items: center;
       position: relative;
       padding: 0;
+      border: 1px solid red;
     }
     .userDetails p{
       font-size: 12px;
@@ -67,6 +68,7 @@
     }
     .userInfo{
       display: flex;
+      border: 1px solid red;
     }
     .userBalance{
     }
