--- a/app.html
+++ b/app.html
@@ -50,7 +50,6 @@
       align-items: center;
       position: relative;
       padding: 0;
-      border: 1px solid red;
     }
     .userDetails p{
       font-size: 12px;
@@ -68,6 +67,7 @@
     }
     .userInfo{
       display: flex;
+      padding: 0;
       border: 1px solid red;
     }
     .userBalance{
