--- a/app.html
+++ b/app.html
@@ -53,6 +53,7 @@
     }
     .userDetails p{
       font-size: 12px;
+      font-weight: bold;
     }
     #user{
       color: rgba(0,0,0,0.5);
@@ -69,6 +70,9 @@
       display: flex;
       padding: 0;
       border: 1px solid red;
+    }
+    .userInfo p{
+      
     }
     .userBalance{
     }
