--- a/app.html
+++ b/app.html
@@ -73,6 +73,9 @@
     }
     .userInfo p{
       margin: 0px 5px 0px;
+      font-size: 12px;
+      background: #f2f2f3;
+      padding: 5px; 
     }
     .userBalance{
     }
