--- a/app.html
+++ b/app.html
@@ -69,13 +69,13 @@
     .userInfo{
       display: flex;
       padding: 0;
-      border: 1px solid red;
     }
     .userInfo p{
       margin: 0px 5px 0px;
       font-size: 12px;
       background: #f2f2f3;
       padding: 5px; 
+      border-radius: 2px;
     }
     .userBalance{
     }
