--- a/app.html
+++ b/app.html
@@ -75,9 +75,11 @@
       font-size: 12px;
       background: #f2f2f3;
       padding: 5px; 
-      border-radius: 2px;
+      border-radius: 5px;
     }
     .userBalance{
+      font-size: 14px;
+      font-weight: bold;
     }
     .dashButtons{
       display: flex;
