--- a/app.html
+++ b/app.html
@@ -78,8 +78,9 @@
       border-radius: 5px;
     }
     .userBalance{
-      font-size: 14px;
+      font-size: 20px;
       font-weight: bold;
+      font-family: "Roboto", "Arial", "Helvetica Neue", Helvetica, sans-serif;
     }
     .dashButtons{
       display: flex;
