--- a/app.html
+++ b/app.html
@@ -79,7 +79,7 @@
     }
     .userBalance{
       font-size: 20px;
-      font-weight: bold;
+      font-weight: 600;
       font-family: "Roboto", "Arial", "Helvetica Neue", Helvetica, sans-serif;
     }
     .dashButtons{
