--- a/app.html
+++ b/app.html
@@ -87,6 +87,9 @@
       display: flex;
       justify-content: space-between;
     }
+    #home{
+      background: blue;
+    }
     .dashButtons button{
       background: transparent;
       color: #000;
@@ -155,7 +158,7 @@
         </div>
         
         <div class="dashButtons">      
-          <button><div class="icon"><i class="fa fa-area-chart" aria-hidden="true"></i></div>Trade</button>
+          <button id="home"><div class="icon"><i class="fa fa-area-chart" aria-hidden="true"></i></div>Trade</button>
           <button><div class="icon"><i class="fa fa-arrow-up" aria-hidden="true"></i></div>Deposit</button>
           <button><div class="icon"><i class="fa fa-paper-plane" aria-hidden="true"></i></div>Withdraw</button>
           <button><div class="icon"><i class="fa fa-ellipsis-v" aria-hidden="true"></i></div>Details</button>
