--- a/app.html
+++ b/app.html
@@ -87,12 +87,12 @@
       display: flex;
       justify-content: space-between;
     }
-    #home{
-      background: blue;
-    }
     .dashButtons button{
       background: transparent;
       color: #000;
+    }
+    .home{
+      background: blue;
     }
     .icon{
       background: #f2f2f3;
@@ -158,7 +158,7 @@
         </div>
         
         <div class="dashButtons">      
-          <button id="home"><div class="icon"><i class="fa fa-area-chart" aria-hidden="true"></i></div>Trade</button>
+          <button><div class="icon home"><i class="fa fa-area-chart" aria-hidden="true"></i></div>Trade</button>
           <button><div class="icon"><i class="fa fa-arrow-up" aria-hidden="true"></i></div>Deposit</button>
           <button><div class="icon"><i class="fa fa-paper-plane" aria-hidden="true"></i></div>Withdraw</button>
           <button><div class="icon"><i class="fa fa-ellipsis-v" aria-hidden="true"></i></div>Details</button>
