--- a/app.html
+++ b/app.html
@@ -92,7 +92,7 @@
       color: #000;
     }
     .home{
-      background: blue;
+      background: #008000;
     }
     .icon{
       background: #f2f2f3;
