--- a/app.html
+++ b/app.html
@@ -96,7 +96,7 @@
       border: 1px solid red;
     }
     .icon{
-      /*background: #f2f2f3;*/
+      background: #f2f2f3;
       height: 50px;
       width: 50px;
       border-radius: 50%;
