--- a/app.html
+++ b/app.html
@@ -99,7 +99,7 @@
       align-items: center;
     }
     .home{
-      background: #008000;
+      background: #83f28f;
     }
     .dashButtons i{
       font-size: 18px;
