--- a/app.html
+++ b/app.html
@@ -79,7 +79,7 @@
     }
     .userBalance{
       font-size: 20px;
-      padding: 5px;
+      padding-left: 5px;
       font-weight: 900;
       font-family: "Roboto", "Arial", "Helvetica Neue", Helvetica, sans-serif;
     }
