Update and rename app. app.html to app.html

--- a/app.html
+++ b/app.html
@@ -120,6 +120,7 @@
     .bottomBtn{
       background: transparent;
       color: grey;
+      margin-bottom: 15px;
     }
     .bottom i{
       font-size: 18px;
