--- a/app.html
+++ b/app.html
@@ -14,6 +14,7 @@
       background: #f2f2f3;
       margin: 0;
       padding: 0;
+      font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
     }
     .top{
       background: #f2f2f3;
