--- a/app.html
+++ b/app.html
@@ -59,6 +59,8 @@
     }
     #user{
       color: rgba(0,0,0,0.5);
+      font-size: 10px;
+      font-weight: 400;
       margin-left: 5px;
     }
     .userDetails i{
