--- a/app.html
+++ b/app.html
@@ -169,6 +169,23 @@
           <button><div class="icon"><i class="fa fa-ellipsis-v" aria-hidden="true"></i></div>Details</button>
         </div>
       </div>
+
+      <div class="body">
+        <div>
+          <h4>Trades</h4>
+        </div>
+        <div class="trades">
+          <div class="tradesP">
+            <p>No open positions</p>
+          </div>
+          <div class="tradesH">
+            <p>No open positions</p>
+          </div>
+          <div class="tradesP">
+            <p>No open positions</p>
+          </div>
+        </div>
+      </div>
     
       <div class="bottom">
         <button class="bottomBtn active"><i class="fa fa-home" aria-hidden="true"></i>Accounts</button>      
