--- a/app.html
+++ b/app.html
@@ -110,6 +110,9 @@
       position: relative;
       top: 30%;
     }
+    .body{
+      margin: 15px;
+    }
     .bottom{
       display: flex;
       position: fixed;
