--- a/app.html
+++ b/app.html
@@ -113,6 +113,10 @@
     .body{
       margin: 15px;
     }
+    .tradesP{
+      padding: 15px;
+      border-bottom: 1px solid #ccc;
+    } 
     .bottom{
       display: flex;
       position: fixed;
@@ -184,7 +188,7 @@
           <div class="tradesH">
             <p>No open positions</p>
           </div>
-          <div class="tradesP">
+          <div class="tradesN">
             <p>No open positions</p>
           </div>
         </div>
