--- a/app.html
+++ b/app.html
@@ -116,7 +116,11 @@
     .tradesP{
       padding: 15px;
       border-bottom: 1px solid #ccc;
-    } 
+    }
+    .tradesP p{
+      height: 100%;
+      border-bottom: 1px solid #000;
+    }
     .bottom{
       display: flex;
       position: fixed;
