--- a/app.html
+++ b/app.html
@@ -113,11 +113,11 @@
     .body{
       margin: 15px;
     }
-    .tradesP{
+    .tradesHead{
       padding: 15px;
       border-bottom: 1px solid #ccc;
     }
-    .tradesP p{
+    .tradesHead h4{
       height: 100%;
       border-bottom: 1px solid #000;
     }
@@ -182,7 +182,7 @@
       </div>
 
       <div class="body">
-        <div>
+        <div class="tradesHead">
           <h4>Trades</h4>
         </div>
         <div class="trades">
