--- a/app.html
+++ b/app.html
@@ -111,13 +111,15 @@
       top: 30%;
     }
     .body{
-      margin: 15px;
+      margin: 30px 15px;
     }
     .tradesHead{
       padding: 0px;
       border-bottom: 1px solid #ccc;
     }
     .tradesHead h4{
+      margin: 0;
+      padding-bottom: 15px;
       border-bottom: 1px solid #000;
     }
     .bottom{
