--- a/app.html
+++ b/app.html
@@ -119,6 +119,7 @@
     }
     .tradesHead h4{
       margin: 0;
+      display: flex;
       padding-bottom: 15px;
       border-bottom: 1px solid #000;
     }
