--- a/app.html
+++ b/app.html
@@ -118,9 +118,8 @@
       border-bottom: 1px solid #ccc;
     }
     .tradesHead h4{
-      margin: 0;
-      width: 20px;
-      display: flex;
+      margin: 0;m
+      display: inline-block;
       padding-bottom: 15px;
       border-bottom: 1.5px solid #000;
     }
