--- a/app.html
+++ b/app.html
@@ -118,7 +118,7 @@
       border-bottom: 1px solid #ccc;
     }
     .tradesHead h4{
-      margin: 0;m
+      margin: 0;
       display: inline-block;
       padding-bottom: 15px;
       border-bottom: 1.5px solid #000;
