--- a/app.html
+++ b/app.html
@@ -123,6 +123,10 @@
       padding-bottom: 10px;
       border-bottom: 1.5px solid #000;
     }
+    .trades{
+      text-align: center;
+      margin-top: 40px;
+    }
     .bottom{
       display: flex;
       position: fixed;
@@ -185,17 +189,17 @@
 
       <div class="body">
         <div class="tradesHead">
-          <h4>Trades</h4>
+          <h4>Open</h4>
         </div>
         <div class="trades">
           <div class="tradesP">
             <p>No open positions</p>
           </div>
           <div class="tradesH">
-            <p>No open positions</p>
+            <p>XAU/USD - Trade</p>
           </div>
           <div class="tradesN">
-            <p>No open positions</p>
+            <p>Click trade to open charts</p>
           </div>
         </div>
       </div>
