--- a/app.html
+++ b/app.html
@@ -121,6 +121,7 @@
       margin: 0;
       display: inline-block;
       padding-bottom: 10px;
+      font-size: 12px;
       border-bottom: 1.5px solid #000;
     }
     .trades{
