--- a/app.html
+++ b/app.html
@@ -126,7 +126,15 @@
     }
     .trades{
       text-align: center;
-      margin-top: 40px;
+      margin-top: 60px;
+    }
+    .tradesP{
+      font-size: 12px;
+    }
+    .tradesH{
+      background: #f3f3f2;
+      border-radius: 3px;
+      
     }
     .bottom{
       display: flex;
