--- a/app.html
+++ b/app.html
@@ -132,8 +132,9 @@
       font-size: 12px;
     }
     .tradesH{
-      background: #f6f3f2;
+      background: #f6f6f2;
       border-radius: 3px;
+      margin: 15px auto;
     }
     .bottom{
       display: flex;
