--- a/app.html
+++ b/app.html
@@ -136,6 +136,10 @@
       border-radius: 3px;
       margin: 15px auto;
     }
+    .tradesH h4{
+      margin: 0;
+      padding: 15px;
+    }
     .bottom{
       display: flex;
       position: fixed;
@@ -202,13 +206,13 @@
         </div>
         <div class="trades">
           <div class="tradesP">
-            <p>No open positions</p>
+            <h4>No open positions</h4>
           </div>
           <div class="tradesH">
-            <p>XAU/USD - Trade</p>
+            <h4>XAU/USD - Trade</h4>
           </div>
           <div class="tradesN">
-            <p>Click trade to open charts</p>
+            <h6>Click trade to open charts</h6>
           </div>
         </div>
       </div>
