--- a/app.html
+++ b/app.html
@@ -132,7 +132,7 @@
       font-size: 12px;
     }
     .tradesH{
-      background: #e6f6e2;
+      background: #e6e3e2;
       border-radius: 3px;
       margin: 15px auto;
     }
