--- a/app.html
+++ b/app.html
@@ -234,7 +234,9 @@
       </div>
       
       <div class="modal">
-        
+        <div class="modalTitle">
+          <h4>Deposit</h4>
+        </div>
       </div>
     </div>
     <script src="sw.js"></script>
