--- a/app.html
+++ b/app.html
@@ -167,6 +167,7 @@
       background: #fff;
       position: fixed;
       bottom: 0;
+      padding: 15px;
       height: 90%;
       z-index: 1000;
       overflow-y: auto;
