--- a/app.html
+++ b/app.html
@@ -169,6 +169,7 @@
       bottom: 0;
       padding: 15px;
       height: 90%;
+      width: 100%;
       z-index: 1000;
       overflow-y: auto;
       transition: all 0.3s ease;
