--- a/app.html
+++ b/app.html
@@ -168,7 +168,8 @@
       position: fixed;
       bottom: 0;
       padding: 15px;
-      height: 98%;
+      height: 95%;
+      border-radius: 15px 15px 0 0;
       width: 100%;
       z-index: 1000;
       overflow-y: auto;
