--- a/app.html
+++ b/app.html
@@ -169,7 +169,8 @@
       bottom: 0;
       padding: 15px;
       height: 95%;
-      border-radius: 15px 15px 0 0;
+      border-top-left-radius: 15px;
+      border-top-right-radius: 15px;
       width: 100%;
       z-index: 1000;
       overflow-y: auto;
