--- a/app.html
+++ b/app.html
@@ -169,7 +169,7 @@
       bottom: 0;
       padding: 15px;
       height: 95%;
-      border-top-left-radius: 30px;
+      border-top-radius: 30px;
       border-top-right-radius: 30px;
       width: 100%;
       z-index: 1000;
