--- a/app.html
+++ b/app.html
@@ -169,7 +169,7 @@
       bottom: 0;
       padding: 15px;
       height: 95%;
-      border-radius: 30px;
+      border-radius: 30% 30%;
       width: 100%;
       z-index: 1000;
       overflow-y: auto;
