--- a/app.html
+++ b/app.html
@@ -169,10 +169,12 @@
       bottom: 0;
       padding: 15px;
       height: 95%;
-      border-radius: 30% 30%;
+      border-top-left-radius: 30px;
+      border-top-right-radius: 30px;
       width: 100%;
       z-index: 1000;
       overflow-y: auto;
+      overflow-x: hidden;
       transition: all 0.3s ease;
     }
   </style>
