--- a/app.html
+++ b/app.html
@@ -174,7 +174,7 @@
       width: 100%;
       z-index: 1000;
       overflow-y: auto;
-      overflow-x: hidden;
+      box-sizing: border-box;
       transition: all 0.3s ease;
     }
   </style>
