--- a/app.html
+++ b/app.html
@@ -241,6 +241,10 @@
       </div>
       
       <div class="modal">
+        <div class="xclose">
+          <button>&times;</button>
+        </div>
+        
         <div class="modalTitle">
           <h4>Deposit</h4>
         </div>
