--- a/app.html
+++ b/app.html
@@ -247,6 +247,14 @@
         
         <div class="modalTitle">
           <h4>Deposit</h4>
+          <button>See all payment methods</button>
+        </div>
+
+        <div class="modalBody">
+          <div class="payMet">
+            <p>Payment Method</p>
+          </div>
+          
         </div>
       </div>
     </div>
