--- a/app.html
+++ b/app.html
@@ -253,6 +253,16 @@
         <div class="modalBody">
           <div class="payMet">
             <p>Payment Method</p>
+            <div class="select">
+              <input type="text" class="datalistInput" list="employs" id="employ" name="employ" placeholder="Please select one"  readonly>
+              <div class="arrow">▼</div>
+              <ul class="options">
+                <li data-value="Self-Employed">Self-Employed</li>
+                <li data-value="Student">Student</li>
+                <li data-value="Employed">Employed</li>
+                <li data-value="Unemployed">Unemployed</li>
+              </ul>
+            </div>
           </div>
           
         </div>
