--- a/app.html
+++ b/app.html
@@ -178,6 +178,45 @@
       box-sizing: border-box;
       transition: all 0.3s ease;
     }
+    .select {
+		  position: relative;
+	  }
+	  .datalistInput { 
+		  cursor: pointer;
+	  }
+	  .arrow {
+		  position: absolute;
+		  top: 50%;
+		  right: 10px;
+		  transform: translateY(-50%);
+		  pointer-events: none;
+		  color: #666;
+		  transition: transform 0.2s ease;
+	  }
+	  .options {
+		  position: absolute;
+		  top: 100%;
+		  left: 0;
+		  right: 0;
+		  background: white;
+		  border: 1px solid #ccc;
+		  border-top: none;
+		  border-radius: 0 0 4px 4px;
+		  max-height: 150px;
+		  overflow-y: auto;
+		  list-style: none;
+		  padding: 0;
+		  margin: 0;
+		  display: none;  
+		  z-index: 1000;
+	  }
+	  .options li {
+		  padding: 8px 10px;
+		  cursor: pointer;
+	  }
+	  .options li:hover {
+		  background-color: #f0f0f0;
+	  }
   </style>
 </head>
   <body>
@@ -254,7 +293,7 @@
           <div class="payMet">
             <p>Payment Method</p>
             <div class="select">
-              <input type="text" class="datalistInput" list="employs" id="employ" name="employ" placeholder="Please select one"  readonly>
+              <input type="text" class="datalistInput" id="employ" placeholder="Please select one"  readonly>
               <div class="arrow">▼</div>
               <ul class="options">
                 <li data-value="Self-Employed">Self-Employed</li>
