--- a/app.html
+++ b/app.html
@@ -302,8 +302,10 @@
 				</ul>
 			</div>
 			  
-			<div>
-				
+			<div class="note">
+				<h4>To avoid delays and losses of funds:</h4>
+				<ol>Start each new deposit in your Personal Area and do not reuse provided details for other transactions</ol>
+				<ol>Make sure to transfer the exact amount you entered below</ol>
 			</div>
 			
 			<div class="select">	
