--- a/app.html
+++ b/app.html
@@ -304,8 +304,10 @@
 			  
 			<div class="note">
 				<h4>To avoid delays and losses of funds:</h4>
-				<ol>Start each new deposit in your Personal Area and do not reuse provided details for other transactions</ol>
-				<ol>Make sure to transfer the exact amount you entered below</ol>
+				<ul>
+				<li>Start each new deposit in your Personal Area and do not reuse provided details for other transactions</li>
+				<li>Make sure to transfer the exact amount you entered below</li>
+				</ul>
 			</div>
 			
 			<div class="select">	
