--- a/app.html
+++ b/app.html
@@ -290,8 +290,8 @@
         </div>
 
         <div class="modalBody">
+			<p>Payment Method</p>
 			<div class="select">	
-				<p>Payment Method</p>
 				<input type="text" class="datalistInput" id="employ" placeholder="Please select one"  readonly>
 				<div class="arrow">▼</div>
 				<ul class="options">
@@ -309,9 +309,9 @@
 				<li>Make sure to transfer the exact amount you entered below</li>
 				</ul>
 			</div>
-			
+
+			<p>Payment Method</p>
 			<div class="select">	
-				<p>Payment Method</p>
 				<input type="text" class="datalistInput" id="employ" placeholder="Please select one"  readonly>
 				<div class="arrow">▼</div>
 				<ul class="options">
@@ -322,11 +322,22 @@
 				</ul>
 			</div>
 
+			<p>Payment Method</p>
+			<div class="select">	
+				<input type="text" class="datalistInput" id="employ" placeholder="Please select one"  readonly>
+				<div class="arrow">▼</div>
+				<ul class="options">
+					<li data-value="Self-Employed">Self-Employed</li>
+					<li data-value="Student">Student</li>
+					<li data-value="Employed">Employed</li>
+					<li data-value="Unemployed">Unemployed</li>
+				</ul>
+			</div>
+			
           </div>
-          
         </div>
-      </div>
-    </div>
+		
+	</div>
     <script src="sw.js"></script>
   </body>
 <script>
