--- a/app.html
+++ b/app.html
@@ -293,7 +293,7 @@
 			<p>Payment Method</p>
 			<div class="select">	
 				<input type="text" class="datalistInput" id="employ" placeholder="Please select one"  readonly>
-				<div class="arrow">▼</div>
+				<div class="arrow"><p>23,473.04 USD</p>▼</div>
 				<ul class="options">
 					<li data-value="Self-Employed">Self-Employed</li>
 					<li data-value="Student">Student</li>
