--- a/app.html
+++ b/app.html
@@ -186,6 +186,8 @@
 	  }
 	  .arrow {
 		  display: flex;
+		  justify-content: center;
+		  border: 1px solid red;
 		  position: absolute;
 		  top: 50%;
 		  right: 10px;
