--- a/app.html
+++ b/app.html
@@ -187,6 +187,7 @@
 	  .arrow {
 		  display: flex;
 		  justify-content: center;
+		  padding: 0;
 		  border: 1px solid red;
 		  position: absolute;
 		  top: 50%;
