--- a/app.html
+++ b/app.html
@@ -197,6 +197,9 @@
 		  color: #666;
 		  transition: transform 0.2s ease;
 	  }
+	  .arrow p{
+		  margin-right: 5px;
+	  }
 	  .options {
 		  position: absolute;
 		  top: 100%;
