--- a/app.html
+++ b/app.html
@@ -192,10 +192,11 @@
 		  transform: translateY(-50%);
 		  pointer-events: none;
 		  color: #666;
+		  padding: 0;
+		  border: 1px solid red;
 		  transition: transform 0.2s ease;
 	  }
 	  .arrow p{
-		  border: 1px solid red;
 		  margin-right: 5px;
 	  }
 	  .options {
