--- a/app.html
+++ b/app.html
@@ -185,7 +185,6 @@
 		  cursor: pointer;
 	  }
 	  .arrow{
-		  display: flex;
 		  position: absolute;
 		  top: 50%;
 		  right: 10px;
@@ -193,11 +192,14 @@
 		  pointer-events: none;
 		  color: #666;
 		  padding: 0;
-		  border: 1px solid red;
 		  transition: transform 0.2s ease;
 	  }
 	  .arrow p{
-		  margin-right: 5px;
+		  margin: 0 5px;
+	  }
+	  .arba{
+		  display: flex;
+		  border: 1px solid red;
 	  }
 	  .options {
 		  position: absolute;
@@ -299,7 +301,7 @@
 			<p>Payment Method</p>
 			<div class="select">	
 				<input type="text" class="datalistInput" id="employ" placeholder="Please select one"  readonly>
-				<div class="arrow"><p>23,473.04 USD</p>▼</div>
+				<div class="arrow">▼</div>
 				<ul class="options">
 					<li data-value="Self-Employed">Self-Employed</li>
 					<li data-value="Student">Student</li>
@@ -331,7 +333,7 @@
 			<p>Payment Method</p>
 			<div class="select">	
 				<input type="text" class="datalistInput" id="employ" placeholder="Please select one"  readonly>
-				<div class="arrow">▼</div>
+				<div class="arrow arba"><p>23,473.04 USD</p>▼</div>
 				<ul class="options">
 					<li data-value="Self-Employed">Self-Employed</li>
 					<li data-value="Student">Student</li>
