--- a/app.html
+++ b/app.html
@@ -332,14 +332,8 @@
 
 			<p>Payment Method</p>
 			<div class="select">	
-				<input type="text" class="datalistInput" id="employ" placeholder="Please select one"  readonly>
+				<input type="text" class="datalistInput" value="MT5:   592631072"  readonly>
 				<div class="arrow arba"><p>23,473.04 USD</p>▼</div>
-				<ul class="options">
-					<li data-value="Self-Employed">Self-Employed</li>
-					<li data-value="Student">Student</li>
-					<li data-value="Employed">Employed</li>
-					<li data-value="Unemployed">Unemployed</li>
-				</ul>
 			</div>
 			
           </div>
